# ZKSantaCPP

./: .env-example  .gitignore  CMakeLists.txt  README.md  participants-example.csv  test-smtp.sh
include/: EmailSender.h  EnvReader.h  ReadCSV.h  SMTPClient.h  SecretSanta.h
src/: EmailSender.cpp  EnvReader.cpp  ReadCSV.cpp  SMTPClient.cpp  SecretSanta.cpp  main.cpp
